style.less
/* ... */
article .mdx-sc-list.mdui-list {
    padding-left: 0;
}
.title, article h2, article h3, article h4 {
    text-align: left;
    font-weight: 700;
}
h3.link-title {
    text-align: center;
    color: rgba(0, 0, 0, .87) !important;
}
.mdui-theme-layout-dark h3.link-title {
    color: hsla(0, 0%, 100%, .87) !important;
}
.mdx-say-after.mdui-card {
    margin: 0 auto;
    margin-bottom: 20px;
    background-color: #EDEDED;
    box-shadow: none;
    word-break: break-all;
    & > svg {
        position: absolute;
        width: 120px;
        height: 120px;
        top: -32px;
        right: -37px;
        opacity: .05;
        pointer-events: none;
    }
}
.ArtMain0 .mdx-say-after.mdui-card {
    background-color: #f5f5f5;
    margin-bottom: 0;
    border-radius: 0 !important;
}
body.mdui-theme-layout-dark .mdx-say-after.mdui-card {
    background-color: #292929;
    & > svg {
        filter: invert(1);
    }
}
body.mdui-theme-layout-dark .ArtMain0 .mdx-say-after.mdui-card {
    background-color: #383838;
}
.mdx-say-after > div {
    padding: 16px;
}
.ArtMain0 .mdx-say-after > div {
    border-left: 5px solid rgb(158, 158, 158);
}
.mdx-ad-after-article {
    width: 94%;
    margin: 0 auto;
}
.mdx-ad-after-post {
    width: 100%;
}
.mdx-ad-after-links {
    width: calc(92% - 16px);
    margin: 0 auto;
}
.mdui-typo .title, .mdui-typo article h1, .mdui-typo article h2, .mdui-typo article h3, .mdui-typo article h4, .mdui-typo article h5, .mdui-typo article h6, article.mdui-typo h1, article.mdui-typo h2, article.mdui-typo h3, article.mdui-typo h4, article.mdui-typo h5, article.mdui-typo h6 {
    color: rgb(var(--mdx-theme-color));
}
article p {
    color: #4b4b4b;
    font-size: 17px;
}
.scrollToTop {
    z-index: 12;
}
#indic {
    position: fixed;
    right: 13.5px;
    bottom: 13.5px;
    z-index: 109;
    width: 60px;
    height: 60px;
    opacity: .7;
    pointer-events: none;
    transform: scale(0) translateZ(0px);
    transition: cubic-bezier(.4, 0, 1, 1), transform .2s;
}
.mdx-tools-up-in #indic {
    bottom: 85.5px;
}
div.PostMain > div.ArtMain > article {
    margin-top: 45px;
    margin-bottom: 20px;
}
div.PostMain > div.ArtMain0 > article {
    margin-top: 15px;
    margin-bottom: 20px;
}
.backGround {
    left: 15px;
    padding: 10px;
    border-radius: 0 0 5px 5px;
    background-color: #dadada;
    color: grey;
}
.backGround, .staTime {
    position: absolute;
    top: 0;
    font-size: 15px;
}
.sta-4 {
    background: -webkit-linear-gradient(top, #e8e8e8 90%, transparent 100%);
    background: linear-gradient(to bottom, #e8e8e8 90%, transparent 100%);
}
.mdui-theme-layout-dark .sta-4 {
    background: -webkit-linear-gradient(top, #424242 90%, transparent 100%);
    background: linear-gradient(to bottom, #424242 90%, transparent 100%);
}
.staTime {
    left: 0;
    box-sizing: border-box;
    padding: 15px;
    width: 100%;
    color: #bcbcbc;
}
.outofSta {
    min-height: 170px;
}
.outofStaGaid {
    height: 180px;
}
.outofSta4 {
    min-height: 250px;
}
body.mdui-locked {
    overflow: auto;
}
ul#mdx_menu > li a {
    display: inline-block;
    width: 100%;
    height: 3pc;
    font-size: 17px;
    line-height: 3pc;
    text-overflow: ellipsis;
    overflow: hidden;
}
.sideImg {
    position: relative;
    width: 100%;
    height: 200px;
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
}
.sideImg > div.mdx-side-lazyload {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    transition: opacity .3s;
    opacity: 0;
}
.sideImg > div.mdx-side-lazyload.mdx-bg-loaded {
    opacity: 1;
}
.nightVision {
    position: absolute;
    top: 10px;
    right: 10px;
    background-color: rgba(0, 0, 0, .5);
    z-index: 4;
}
.mdui-theme-layout-dark #left-drawer {
    background-color: #303030 !important;
    color: #fff !important;
}
.mdui-theme-layout-dark .sayInSta, .mdui-theme-layout-dark article p {
    color: hsla(0, 0%, 100%, .8) !important;
}
.mdui-theme-layout-dark .backGround {
    background-color: #525252;
}
.mdui-theme-layout-dark .staTime {
    color: #5a5a5a;
}
.mdui-theme-layout-dark img {
    -webkit-filter: brightness(.8);
    filter: brightness(.8);
}
.mdui-theme-layout-dark.mdx-always-dark img {
    -webkit-filter: brightness(1);
    filter: brightness(1);
}
.mdui-theme-layout-dark div.PostTitleFillBack2[class*=mdui-color-], .mdui-theme-layout-dark div.PostTitleFill[class*=mdui-color-], .mdui-theme-layout-dark div.PostTitle[class*=mdui-color-] {
    background-color: #212121 !important;
    color: #fff !important;
}
.mdx-logo {
    width: auto;
    max-height: 45px;
    vertical-align: middle;
}
.side-info-head {
    position: absolute;
    top: 20px;
    left: 20px;
    width: 65px;
    height: 65px;
    border-radius: 65px;
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    z-index: 2;
    opacity: 0;
    transition: opacity .3s;
}
.side-info-head.mdx-bg-loaded {
    opacity: 1;
}
.side-info-more {
    position: absolute;
    bottom: 0;
    left: 0;
    box-sizing: border-box;
    padding: 20px;
    color: #fff;
    font-size: 17px;
    z-index: 3;
}
.side-info-oth {
    color: hsla(0, 0%, 100%, .7);
    font-size: 13px;
}
li.current-menu-item, li.current_page_item {
    background-color: rgba(0, 0, 0, .08);
    font-weight: 700;
}
li.current-menu-item div.mdui-list-item-content, li.current_page_item div.mdui-list-item-content {
    font-weight: 700;
}
#qrcode {
    overflow: hidden;
    padding: 7px;
    width: 164px;
    height: 164px;
    background-color: #fff !important;
}
/* ... */

